# AI-collective-langgraph

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  lab  lab.cmd  lab.ps1  pyproject.toml  requirements.txt  vercel.json
app/: __init__.py
app/agents/: __init__.py  research_team.py
app/config/: __init__.py  settings.py
app/graphs/: __init__.py  learning_graphs.py
app/prompts/: __init__.py  templates.py
app/services/: __init__.py  memory.py
app/state/: __init__.py  schemas.py
app/tools/: __init__.py  basic_tools.py
docs/: README.md  langsmith.md  student-guide.md
docs/docker/: Dockerfile-line-by-line.md  README.md  compose-line-by-line.md
docs/instructor/: 60-minute-teaching-plan.md  bootcamp-slides-outline.md  langsmith-deep-dive.md  module-by-module-teaching-guide.md  speaker-notes.md
docs/slides/: README.md  app.js  index.html  outline.md  speaker-script.md  styles.css
modules/01_hello_graph/: Code.md  Concept.md  Example.md  Exercise.md  Solution.md  main.py
modules/02_state_management/: Code.md  Concept.md  Example.md  Exercise.md  Solution.md  solution.py
modules/03_conditional_edges/: Code.md  Concept.md  Example.md  Exercise.md  Solution.md  main.py
modules/04_tools/: Code.md  Concept.md  Example.md  Exercise.md  Solution.md  solution.py
modules/05_memory/: Code.md  Concept.md  Example.md  Exercise.md  Solution.md  main.py
modules/06_agent/: Code.md  Concept.md  (+4 more)
tests/: test_capstone.py  test_graphs.py  test_lab_runner.py  test_memory.py  test_tools.py
tools/: __init__.py  lab_runner.py
(+76 files in other folders)
